# leads

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  pyoxidizer.bzl  pyoxidizer.toml  search-index.js  settings.html  src-files.js
.github/workflows/: rust-docs.yml
leads/: all.html  enum.LeadsError.html  index.html  sidebar-items.js  type.LeadsResult.html
leads/data/: index.html  sidebar-items.js
leads/data/base/: enum.DataError.html  index.html  sidebar-items.js  struct.DataInfo.html
leads/data/descriptive/: enum.DescriptiveError.html  index.html  sidebar-items.js  struct.DescriptiveAnalysis.html  struct.FeatureStats.html
leads/data/missing_values/: enum.MissingValueError.html  index.html  sidebar-items.js  struct.MissingValueAnalysis.html
leads/data/visualizations/: enum.ReportSection.html  enum.SampleModeEnum.html  enum.VisualizationError.html  fn.sample_dataframe.html  index.html  sidebar-items.js  struct.VisualizationManager.html
leads/prelude/: index.html  sidebar-items.js  struct.Pdfium.html
leads/report/: index.html  sidebar-items.js
leads/spinner/: fn.print_status.html  fn.setup_spinner.html  index.html  sidebar-items.js
py/: README.md
py/viz_lib/: visualizations.py
python/: main.py  requirements.txt
python/viz_lib/: __init__.py  missing_values.py
search.desc/leads/: leads-desc-0-.js
src/: lib.rs  main.rs  spinner.rs
src/data/: base.rs  descriptive.rs  load.rs  missing_values.rs  mod.rs  visualizations.rs
src/leads/: lib.rs.html  spinner.rs.html
src/report/: glossary.rs  pdf.rs
(+46 files in other folders)
